
get_filename_component(MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string(TOUPPER ${MODULE_NAME} MODULE_NAME)


file(READ subcompositions.txt SUB_CPS)

foreach(SUB_CPS_NAME ${SUB_CPS})
    add_subdirectory(${SUB_CPS_NAME})
endforeach(SUB_CPS_NAME)

foreach(SUB_CPS_NAME ${SUB_CPS})
    string(TOUPPER ${SUB_CPS_NAME} SUB_CPS_NAME)
    list(APPEND SOURCE_FILES ${${SUB_CPS_NAME}_SOURCE_FILES})
endforeach(SUB_CPS_NAME)

foreach(SUB_CPS_NAME ${SUB_CPS})
    string(TOUPPER ${SUB_CPS_NAME} SUB_CPS_NAME)
    list(APPEND INCLUDE_DIRS ${${SUB_CPS_NAME}_INCLUDE_DIRS})
endforeach(SUB_CPS_NAME)

SET ( ${MODULE_NAME}_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
SET ( ${MODULE_NAME}_SOURCE_FILES ${SOURCE_FILES} PARENT_SCOPE)
